--- a/assets/css/front.css
+++ b/assets/css/front.css
@@ -240,6 +240,64 @@ p.lead {
     font-size: 27px;
 }
 
+
+ .app_info_modal {
+        text-align: center;
+	      width:350px;
+        max-width: 90%;
+        padding: 30px 20px;
+        border-radius: 12px;
+        position: fixed;
+        background-color: #ffffff;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50% , -50%);
+	      z-index:9999;
+    }
+    .app_info_modal img {
+        width: 150px;
+        max-width: 100%;
+    }
+    .app_info_modal h2 {
+        font-size: 20px;
+        margin: 18px 0;
+	font-weight:500;
+    }
+    .app_info_modal img {
+        box-shadow: 0px 0px 12px 0px #f1f1f1;
+        border-radius: 100%;
+    }
+    .install_now_btn {
+        background-color: #4e4e91;
+        display: block;
+        padding: 10px;
+        text-decoration: none;
+        color: #fff;
+        font-size: 16px;
+        border-radius: 8px;
+        margin: 20px;
+    }
+    .not_now {
+        text-decoration: none;
+        font-size: 16px;
+        color: #a1a1a1;
+    }
+    body.app-popup {
+    overflow: hidden;
+position: relative;
+}
+body.app-popup:before {
+    content: "";
+    background-color: #000;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    position: absolute;
+    z-index: 999;
+    opacity: 0.3;
+}
+
 @media (max-width: 768px)
 {
   #contact .contact_button {
@@ -2376,7 +2434,7 @@ h4.panel-title a { color: #000!important;font-weight:500;}
 .result_popup {
   max-width: 500px;
   max-height: 80vh;
-  height: 240px;
+  height: auto;
   text-align: center;
   background-color: #f1b900;
   padding: 40px 20px;
@@ -2412,4 +2470,14 @@ h4.panel-title a { color: #000!important;font-weight:500;}
 .result_popup p {
   margin: 18px 0 0 0;
   font-size: 20px;
+}
+.result_popup.marvellous p {
+    color: #fff;
+}
+
+.result_popup.marvellous h2 {
+    color: #fff;
+}
+.result_popup.marvellous {
+    background-color: #222289;
 }
